Thesis/ws/log/build_2023-04-11_15-47-42/locomotion_core/stderr.log
  File "/home/vboxuser/ws/install/locomotion_core/lib/python3.10/site-packages/locomotion_core/cmd_motors.py", line 26
    minimal_subscriber = du_commander)
                                     ^
SyntaxError: unmatched ')'

